Add interactive asset mapping
